--- a/scss/pages/_menus.scss
+++ b/scss/pages/_menus.scss
@@ -75,7 +75,7 @@
                 color: transparent;
 
                 &:hover {
-                    color: $secondary-color;
+                    color: $primary-color;
                     transition: all 1.2s linear;
                 }
             }
