--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -236,7 +236,7 @@
         }
 
         &:hover {
-            color: $secondary-color;
+            color: $primary-color;
             transition: all 1.2s linear;
         }
     }
