--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -80,7 +80,7 @@
         border: none;
         border-radius: 20px;
         padding: 0;
-        background-color: white;
+        background-color: $bg-color;
         box-shadow: 2px 2px 2px 2px #eaeaea;
         margin: 20px 0 20px 15px;
         cursor: pointer;
@@ -92,7 +92,7 @@
 
 
         &:hover {
-            background-color: #FCF3E7;
+            background-color: #f5edff;
 
 
             .functions__option__icon {
