--- a/scss/pages/_menus.scss
+++ b/scss/pages/_menus.scss
@@ -64,7 +64,11 @@
         &__title {
             width: 100%;
             font-family: $font-logoTitle;
-            font-size: 2rem;
+            font-size: 1.5rem;
+
+            @include small {
+                font-size: 2rem;
+            }
         }
 
         .fa-heart {
