--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -17,14 +17,19 @@
         &__search {
             height: 30px;
             border: none;
-            padding-left: 5px;
-            margin-left: 10px;
+            width: 150px;
             color: #000;
             background-color: #e2e2e2;
-            font-size: 0.8rem;
+            font-size: 1rem;
             font-weight: bold;
         }
+
+        .fa-map-marker-alt {
+            font-size: 1.1rem;
+            margin-right: 5px;
+        }
     }
+
 
     .presentation {
         display: flex;
