--- a/scss/pages/_menus.scss
+++ b/scss/pages/_menus.scss
@@ -77,6 +77,7 @@
 
             &.fas {
                 color: transparent;
+                transform: translateY(-32px);
 
                 &:hover {
                     color: $primary-color;
