Icône coeur: couleur primaire, remplissage

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ a {
     transform: rotate(360deg);
   }
 }
+/* HEART ANIMATION */
+@keyframes fillIn {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(100%);
+  }
+}
 /* CARDS ANIMATION DELAY */
 @keyframes cards {
   0% {
@@ -380,7 +389,7 @@ footer {
 }
 .restaurant .fa-heart:hover {
   color: #9356DC;
-  transition: all 1.2s linear;
+  animation: fillIn 1s ease;
 }
 .restaurant__new {
   position: absolute;
@@ -470,7 +479,7 @@ footer {
 }
 .menu__header .fa-heart.fas:hover {
   color: #9356DC;
-  transition: all 1.2s linear;
+  animation: fillIn 1s ease;
 }
 
 .menu__page {
