--- a/scss/utils/_keyframes.scss
+++ b/scss/utils/_keyframes.scss
@@ -16,6 +16,19 @@
 }
 
 
+/* HEART ANIMATION */ 
+
+@keyframes fillIn {
+    0% {
+        transform: translateY(0%);
+    }
+
+    100% {
+        transform: translateY(100%);
+    }
+}
+
+
 /* CARDS ANIMATION DELAY */ 
 
 @keyframes cards {
