--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -242,7 +242,7 @@
 
         &:hover {
             color: $primary-color;
-            animation: fillIn 1s ease;
+            transition: all 1s ease;
         }
     }
 
